-issue#5458: Unable to delete a Data Query when there are no Graphs using it
-issue#5459: There is no option to not duplicate Graph Template Data Query association when duplicating a Graph Template
-issue#5460: When duplicating a Data Template errors can appear in the Cacti log
-issue#5462: Package preview aparantely making changes to Cacti Templates or there is a Caching issue
-feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
-feature#5393: Add template for SNMP printer
-feature#5418: Display device class before package import
-feature#5442: Table settings - extend column size, log error when variable name is truncated
-feature#5444: Table settings_user - extend column size, log error when variable name is truncated
-feature#5448: Data Queries do not have a Duplication function
-feature: Update Cisco Device Template to include HSRP graph template
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2
-feature: Upgrade ua-parser.js to version 1.0.35
-feature: New hook for device template change 'device_template_change'

1.2.24
-issue#5127: Unable to import Local Linux Machine template
-issue#5134: Maximum Memory shows -1 instead of Unlimited
-issue#5135: RRDcleaner and RRDcheck share the same filter details causing errors
-issue#5136: When passed a null value, number_format_i18n() can return a invalid number by ddb4github
-issue#5137: When attempting to update structured paths, SQL errors can occur
-issue#5140: Compatibility changes for SNMP under PHP 8.2
-issue#5142: Fix issues with permission model and warnings
-issue#5143: When a Device has zero Graphs or Data Sources, it does not display a value
-issue#5145: Changing SNMP settings to None leaves Bulk Walk Maximum Repititions visible
-issue#5147: Language handlers may not always be loaded properly
-issue#5150: Wrong parameters are shown for the Import Package script
-issue#5151: Templates appear to lose their suggested name values